# wm

./: .gitignore  CMakeLists.txt  Doxyfile  build.bat  build.sh  conanfile.txt  run.bat  run.sh  test.sh
.circleci/: config.yml
src/: Main.cpp  wm.cpp  wm.h
tests/: wmTest.cpp
